# ffmpeg_learn

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
Golomb/: CMakeLists.txt  bs.c  bs.h  main.c
cmake/: FindFFmpeg.cmake  FindPackages.cmake  MyUsefulFuncs.cmake
ffmpeg/: CMakeLists.txt  get_lib_version.cpp  main.cpp  video_decode_flow.cpp  video_decode_mp42yuv420p.cpp  video_decode_mp42yuv420sp.cpp  video_decode_save.cpp
script/: install_thirdparty.sh
video/: audio.aac  audio.pcm  test_copy.264
